styled dark mode icon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         
     </main>
-    <button id="darkMode"><i class="fa-solid fa-circle-half-stroke"></i></button> <!-- dark mode button -->
+    <button id="darkMode"><i id="iconMode" class="fa-solid fa-sun fa-beat"></i></button> <!-- dark mode button -->
 
     <footer>
         <h2>Dark Secrets, Bright Flavors!</h2> <!-- slogan -->
