--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <link rel="stylesheet" href="/assets/css/card.css">
     <script defer src="assets/js/cart.js"></script>
     <script defer src="assets/js/plats.js"></script>
+    <script defer src="https://kit.fontawesome.com/715b1baf80.js" crossorigin="anonymous"></script>
 
     <title>Document</title>
 </head>
 <body>
+
+    <main></main>
+
+    <footer>
+        <h1>BIENVNEFUFSFKLLFSLFSG</h1>
+    </footer>
 </body>
 </html>
