--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 
     <link rel="stylesheet" href="/assets/css/card.css">
-    <script defer src="assets/js/cart.js"></script>
-    <script defer src="assets/js/plats.js"></script>
+    <script defer type="module" src="assets/js/all.js"></script>
     <script defer src="https://kit.fontawesome.com/715b1baf80.js" crossorigin="anonymous"></script>
 
     <title>Document</title>
