--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/card.css">
+    <!-- <link rel="stylesheet" href="./assets/css/filter.css"> -->
     <script defer src="assets/js/cart.js"></script>
     <script defer src="assets/js/plats.js"></script>
     <script defer type="module" src="assets/js/all.js"></script>
@@ -15,8 +16,8 @@
 
     <main></main>
 
-    <footer>
+    <!-- <footer>
         <h1>BIENVNEFUFSFKLLFSLFSG</h1>
-    </footer>
+    </footer> -->
 </body>
 </html>
