--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 
 
+    <link rel="stylesheet" href="/assets/css/shopping-menu.css">
     <link rel="stylesheet" href="/assets/css/card.css">
     <script defer type="module" src="assets/js/all.js"></script>
     <script defer src="https://kit.fontawesome.com/715b1baf80.js" crossorigin="anonymous"></script>
