--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <title>Document</title>
 </head>
 <body>
-
+<p>test</p>
     <main></main>
 
-    <!-- <footer>
-        <h1>BIENVNEFUFSFKLLFSLFSG</h1>
-    </footer> -->
+
 </body>
 </html>
