--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-
     <link rel="stylesheet" href="/assets/css/shopping-menu.css">
     <link rel="stylesheet" href="/assets/css/card.css">
+    <link rel="stylesheet" href="/assets/css/side-menu.css">
     <script defer type="module" src="assets/js/all.js"></script>
-    <script defer src="https://kit.fontawesome.com/715b1baf80.js" crossorigin="anonymous"></script>
-
+    <script defer  src="https://kit.fontawesome.com/8648ca5510.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
 
-    <main></main>
+    <main>
+    </main>
 
     <footer>
         <h1>BIENVNEFUFSFKLLFSLFSG</h1>
