--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <link rel="stylesheet" href="/assets/css/shopping-menu.css">
     <link rel="stylesheet" href="/assets/css/card.css">
     <link rel="stylesheet" href="/assets/css/side-menu.css">
-    <script defer type="module" src="assets/js/all.js"></script>
+    <script defer type="module" src="assets/js/main.js"></script>
     <script defer  src="https://kit.fontawesome.com/8648ca5510.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
 
     <main>
+        <div class="div-container-menu">
+        </div>
     </main>
 
 
