--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <script defer type="module" src="assets/js/main.js"></script>
     <script defer  src="https://kit.fontawesome.com/8648ca5510.js" crossorigin="anonymous"></script>
     <title>Document</title>
